<resources>
    <string name="app_name">Seizure Alert!</string>
    <string name="welcome">Welcome New User!</string>
    <string name="Phone_Number_Heading">Enter Caregiver\'s Phone Number:</string>
    <string name="childs_Name">Patients\'s Name:</string>
    <string name="welcome_Text_Home_Screen">Welcome!</string>
    <string name="first_Screen_Enter_Button">Enter</string>
    <string name="title_seizureAlert" />
    <string name="filter_title_viewseizureAlert" />
    <string name="settings_Heaer">Settings</string>
    <string name="settings_header">Settings</string>
    <string name="settings_button_info">Information</string>
    <string name="info_header">Information</string>
    <string name="parent_phone_number_settings_info">Caregiver\'s Phone Number</string>
</resources>
