<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="4dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="44dp"
            android:layout_height="50dp"
    android:background="@drawable/arrow2"
            android:id="@+id/back_button_settings_info_header" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:text="@string/info_header"
        android:textSize="30sp"
        android:layout_gravity="right"
            android:paddingRight="50dp"
        android:textColor="@color/colorAccent"
        android:gravity="center"
        android:id="@+id/settings_info_header"
        />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="20dp"

        android:text="@string/parent_phone_number_settings_info"
        android:textSize="20sp"
        android:gravity="left"
        android:textColor="@color/colorAccent"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:gravity="left"
        android:id="@+id/phone_number_editText_settings_info" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingTop="35dp"
        android:textSize="20sp"
        android:gravity="left"
        android:textColor="@color/colorAccent"
        android:text="@string/childs_Name"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_childName_settings_info" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="15dp" />

    <Button
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:text="Save Changes"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:id="@+id/save_changes_info_button" />

</LinearLayout>