<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fillViewport="true">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.shadowappdev.seizurealert.MainActivity"
        android:orientation="vertical"
        android:padding="4dp"
        android:paddingTop="2dp"
        android:background="#3a3a3a"
        android:layout_gravity="center"
        android:weightSum="1"
        >

    <ImageView
        android:paddingTop="35dp"
        android:paddingBottom="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/landing_Page_Logo"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/logo_clock"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingTop="20dp"
        android:text="@string/Phone_Number_Heading"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/phone_number_editText"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:paddingTop="35dp"
        android:textSize="20sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="@string/childs_Name"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:gravity="center"
        android:id="@+id/editText_childName"
        android:layout_gravity="center_horizontal" />
<Space
    android:layout_width="match_parent"
    android:layout_height="16dp"
    />

    <Button
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:text="@string/first_Screen_Enter_Button"
        android:gravity="center"
        android:id="@+id/enter_firstscreen_button"
        android:textColor="@color/colorAccent"
        android:clickable="true"
        android:background="@color/colorPrimaryDark"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
</ScrollView>
</RelativeLayout>